# gpu_watcher

./: .gitignore  Cargo.toml  README.md  config_example.toml
.github/workflows/: build.yml
src/: config.rs  main.rs  notify.rs
