[package]
name = "gpu_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.37", features = ["full"] }
toml = "0.8"
tracing-subscriber = "0.3"
tracing = "0.1"
tracing-unwrap = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"